@@ -195,6 +195,27 @@ class MemoryObjectStoreTests(ObjectStoreTests, TestCase):
         TestCase.setUp(self)
         self.store = MemoryObjectStore()
 
+    def test_add_pack(self):
+        o = MemoryObjectStore()
+        f, commit = o.add_pack()
+        b = make_object(Blob, data="more yummy data")
+        write_pack_objects(f, [(b, None)])
+        commit()
+
+    def test_add_thin_pack(self):
+        o = MemoryObjectStore()
+        blob = make_object(Blob, data='yummy data')
+        o.add_object(blob)
+
+        f = StringIO()
+        entries = build_pack(f, [
+          (REF_DELTA, (blob.id, 'more yummy data')),
+          ], store=o)
+        o.add_thin_pack(f.read, None)
+        packed_blob_sha = sha_to_hex(entries[0][3])
+        self.assertEqual((Blob.type_num, 'more yummy data'),
+                         o.get_raw(packed_blob_sha))
+
 
 class PackBasedObjectStoreTests(ObjectStoreTests):
 
