@@ -19,6 +19,9 @@
 
   * Add `Repo.get_description` method. (Jelmer Vernooij)
 
+  * Add `MemoryObjectStore.add_pack` and `MemoryObjectStore.add_thin_pack` methods.
+    (David Bennett)
+
 0.9.0	2013-05-31
 
  BUG FIXES
